Add dashboard screenshots

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -109,6 +109,19 @@ res = uptrain_client.log_and_evaluate(
 print(json.dumps(res,indent=3))
 ```
 
+### Dashboard
+
+The UpTrain API client gives you exclusive access to our dashboard.
+
+![image](https://github.com/uptrain-ai/uptrain/assets/43818888/b84a76eb-6777-4290-b532-7e0038eded5a)
+
+
+### Insights
+
+You can filter failure cases and generate common topics among them. This can help identify the core issue and help fix it
+
+![image](https://github.com/uptrain-ai/uptrain/assets/43818888/7c24afcb-94b2-4c9a-a48f-23d86bbfdab0)
+
 
 ## Experiments
 
