Update UpTrain Managed Service and Dashboards section

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -82,9 +82,10 @@ results = client.log_and_evaluate(
 print(json.dumps(results, indent=3))
 ```
 
-You can create a free UpTrain account [here](https://uptrain.ai/) and get free trial credits. If you want more trial credits, [book a call with the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min).
 
-## [Optional] UpTrain Managed Service and Dashboards
+## UpTrain Managed Service and Dashboards (Optional)
+
+You can create a free UpTrain account [here](https://uptrain.ai/) and get free trial credits. If you want more trial credits, [book a call with the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min).
 
 UpTrain Managed service provides:
 1. Dashboards with advanced drill-down and filtering options
