--- a/examples/integrations/spade/evaluating_guidelines_generated_by_spade.ipynb
+++ b/examples/integrations/spade/evaluating_guidelines_generated_by_spade.ipynb
@@ -228,7 +228,7 @@
     }
    ],
    "source": [
-    "from spade.spade_utils import *\n",
+    "from spade_utils import *\n",
     "\n",
     "print(\"TASK DATA:\\n\", EXAMPLES[0], \"\\n\\RESPONSE:\\n\", generate_response(PROMPT_TEMPLATE, LLM, EXAMPLES[0]))"
    ]
