--- a/examples/checks/custom/writing_custom_evals.ipynb
+++ b/examples/checks/custom/writing_custom_evals.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -159,8 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-01-28 22:53:48.956\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36mfetch_responses\u001b[0m:\u001b[36m152\u001b[0m - \u001b[33m\u001b[1mDetected a running event loop, scheduling requests in a separate thread.\u001b[0m\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:02<00:00,  2.00it/s]\n"
+      "\u001b[32m2024-01-28 23:13:22.443\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     }
    ],
@@ -168,7 +167,7 @@
     "from uptrain import CustomPromptEval, EvalLLM, Settings\n",
     "import json\n",
     "\n",
-    "OPENAI_API_KEY = \"sk-*****************\"  # Insert your OpenAI key here\n",
+    "OPENAI_API_KEY = \"sk-*******************\"  # Insert your OpenAI key here\n",
     "eval_llm = EvalLLM(settings=Settings(openai_api_key=OPENAI_API_KEY, response_format={\"type\":\"json_object\"}))\n",
     "\n",
     "results = eval_llm.evaluate(\n",
@@ -195,43 +194,43 @@
      "text": [
       "[\n",
       "   {\n",
-      "      \"question\": \"What causes diabetes?\",\n",
-      "      \"ground_truth\": \"Diabetes is a metabolic disorder characterized by high blood sugar levels. It is primarily caused by a combination of genetic and environmental factors, including obesity and lack of physical activity.\",\n",
-      "      \"response\": \"Diabetes is primarily caused by a combination of genetic and environmental factors, including obesity and lack of physical activity.\",\n",
-      "      \"Choice\": \"CORRECT BUT INCOMPLETE\",\n",
-      "      \"Explanation\": \"The predicted answer correctly identifies the primary causes of diabetes as genetic and environmental factors, including obesity and lack of physical activity. However, it does not mention that diabetes is a metabolic disorder characterized by high blood sugar levels, which is an important aspect of the real answer.\",\n",
-      "      \"score_custom_prompt\": 0.5\n",
-      "   },\n",
-      "   {\n",
-      "      \"question\": \"How is pneumonia treated?\",\n",
-      "      \"ground_truth\": \"Pneumonia is an infection that inflames the air sacs in one or both lungs. It is typically treated with antibiotics, rest, and supportive care. The choice of antibiotics depends on the type of pneumonia and its severity.\",\n",
-      "      \"response\": \"Pneumonia is typically treated with antibiotics, rest, and supportive care. The choice of antibiotics depends on the type of pneumonia and its severity.\",\n",
-      "      \"Choice\": \"CORRECT\",\n",
-      "      \"Explanation\": \"The predicted answer accurately states that pneumonia is typically treated with antibiotics, rest, and supportive care, and acknowledges that the choice of antibiotics depends on the type of pneumonia and its severity. This aligns with the real answer provided.\",\n",
+      "      \"user_question\": \"What causes diabetes?\",\n",
+      "      \"ground_truth_response\": \"Diabetes is a metabolic disorder characterized by high blood sugar levels. It is primarily caused by a combination of genetic and environmental factors, including obesity and lack of physical activity.\",\n",
+      "      \"user_response\": \"Diabetes is primarily caused by a combination of genetic and environmental factors, including obesity and lack of physical activity.\",\n",
+      "      \"Choice\": \"Correct\",\n",
+      "      \"Explanation\": \"The predicted answer accurately identifies the primary causes of diabetes as genetic and environmental factors, including obesity and lack of physical activity, matching the real answer. Therefore, it is considered correct.\",\n",
       "      \"score_custom_prompt\": 1.0\n",
       "   },\n",
       "   {\n",
-      "      \"question\": \"Is the flu vaccine effective?\",\n",
-      "      \"ground_truth\": \"The influenza vaccine is recommended to prevent seasonal flu. Yes, the flu vaccine is generally effective in preventing or reducing the severity of influenza. However, its effectiveness can vary based on factors such as age and the match between the vaccine and circulating flu strains.\",\n",
-      "      \"response\": \"Yes, the flu vaccine is generally effective in preventing or reducing the severity of influenza. However, its effectiveness can vary based on factors such as age and the match between the vaccine and circulating flu strains.\",\n",
-      "      \"Choice\": \"CORRECT BUT INCOMPLETE\",\n",
-      "      \"Explanation\": \"The predicted answer correctly states that the flu vaccine is generally effective in preventing or reducing the severity of influenza. However, it is incomplete because it does not mention that the effectiveness can vary based on factors such as age and the match between the vaccine and circulating flu strains, as mentioned in the real answer.\",\n",
-      "      \"score_custom_prompt\": 0.5\n",
-      "   },\n",
-      "   {\n",
-      "      \"question\": \"What are the symptoms of a heart attack?\",\n",
-      "      \"ground_truth\": \"A heart attack, or myocardial infarction, occurs when the blood supply to the heart muscle is blocked. Symptoms of a heart attack may include chest pain or discomfort, shortness of breath, nausea, lightheadedness, and pain or discomfort in one or both arms, the jaw, neck, or back.\",\n",
-      "      \"response\": \"Symptoms of a heart attack may include chest pain or discomfort, shortness of breath, nausea, lightheadedness, and pain or discomfort in one or both arms, the jaw, neck, or back.\",\n",
-      "      \"Choice\": \"CORRECT\",\n",
-      "      \"Explanation\": \"The predicted answer matches the real answer in terms of listing the symptoms of a heart attack. All the symptoms mentioned in the real answer are also present in the predicted answer, so it is correct.\",\n",
+      "      \"user_question\": \"How is pneumonia treated?\",\n",
+      "      \"ground_truth_response\": \"Pneumonia is an infection that inflames the air sacs in one or both lungs. It is typically treated with antibiotics, rest, and supportive care. The choice of antibiotics depends on the type of pneumonia and its severity.\",\n",
+      "      \"user_response\": \"Pneumonia is typically treated with antibiotics, rest, and supportive care. The choice of antibiotics depends on the type of pneumonia and its severity.\",\n",
+      "      \"Choice\": \"Correct\",\n",
+      "      \"Explanation\": \"The predicted answer accurately states that pneumonia is typically treated with antibiotics, rest, and supportive care, and acknowledges that the choice of antibiotics depends on the type of pneumonia and its severity. It is a complete and accurate response to the question.\",\n",
       "      \"score_custom_prompt\": 1.0\n",
       "   },\n",
       "   {\n",
-      "      \"question\": \"Can stress cause physical health problems?\",\n",
-      "      \"ground_truth\": \"Stress is the body's response to challenges or threats. Yes, chronic stress can contribute to various physical health problems, including cardiovascular issues, digestive problems, and a weakened immune system.\",\n",
-      "      \"response\": \"Yes, chronic stress can contribute to various physical health problems, including cardiovascular issues, digestive problems, and a weakened immune system.\",\n",
-      "      \"Choice\": \"CORRECT\",\n",
-      "      \"Explanation\": \"The predicted answer correctly identifies that chronic stress can contribute to various physical health problems, including cardiovascular issues, digestive problems, and a weakened immune system, which aligns with the real answer. The answer is accurate and complete.\",\n",
+      "      \"user_question\": \"Is the flu vaccine effective?\",\n",
+      "      \"ground_truth_response\": \"The influenza vaccine is recommended to prevent seasonal flu. Yes, the flu vaccine is generally effective in preventing or reducing the severity of influenza. However, its effectiveness can vary based on factors such as age and the match between the vaccine and circulating flu strains.\",\n",
+      "      \"user_response\": \"Yes, the flu vaccine is generally effective in preventing or reducing the severity of influenza. However, its effectiveness can vary based on factors such as age and the match between the vaccine and circulating flu strains.\",\n",
+      "      \"Choice\": \"Correct\",\n",
+      "      \"Explanation\": \"The predicted answer accurately states that the flu vaccine is generally effective in preventing or reducing the severity of influenza and acknowledges that its effectiveness can vary based on factors such as age and the match between the vaccine and circulating flu strains. It aligns with the real answer and does not contain any incorrect information.\",\n",
+      "      \"score_custom_prompt\": 1.0\n",
+      "   },\n",
+      "   {\n",
+      "      \"user_question\": \"What are the symptoms of a heart attack?\",\n",
+      "      \"ground_truth_response\": \"A heart attack, or myocardial infarction, occurs when the blood supply to the heart muscle is blocked. Symptoms of a heart attack may include chest pain or discomfort, shortness of breath, nausea, lightheadedness, and pain or discomfort in one or both arms, the jaw, neck, or back.\",\n",
+      "      \"user_response\": \"Symptoms of a heart attack may include chest pain or discomfort, shortness of breath, nausea, lightheadedness, and pain or discomfort in one or both arms, the jaw, neck, or back.\",\n",
+      "      \"Choice\": \"Correct\",\n",
+      "      \"Explanation\": \"The predicted answer is correct as it accurately lists the symptoms of a heart attack as chest pain or discomfort, shortness of breath, nausea, lightheadedness, and pain or discomfort in one or both arms, the jaw, neck, or back, which are all commonly associated with a heart attack.\",\n",
+      "      \"score_custom_prompt\": 1.0\n",
+      "   },\n",
+      "   {\n",
+      "      \"user_question\": \"Can stress cause physical health problems?\",\n",
+      "      \"ground_truth_response\": \"Stress is the body's response to challenges or threats. Yes, chronic stress can contribute to various physical health problems, including cardiovascular issues, digestive problems, and a weakened immune system.\",\n",
+      "      \"user_response\": \"Yes, chronic stress can contribute to various physical health problems, including cardiovascular issues, digestive problems, and a weakened immune system.\",\n",
+      "      \"Choice\": \"Correct\",\n",
+      "      \"Explanation\": \"The predicted answer is correct as it accurately states that chronic stress can contribute to various physical health problems, including cardiovascular issues, digestive problems, and a weakened immune system, which aligns with the real answer.\",\n",
       "      \"score_custom_prompt\": 1.0\n",
       "   }\n",
       "]\n"
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -278,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-01-25 15:22:53.799\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.remote\u001b[0m:\u001b[36mlog_and_evaluate\u001b[0m:\u001b[36m507\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain server\u001b[0m\n"
+      "\u001b[32m2024-01-28 23:14:09.909\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.remote\u001b[0m:\u001b[36mlog_and_evaluate\u001b[0m:\u001b[36m507\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain server\u001b[0m\n"
      ]
     }
    ],
@@ -286,7 +285,7 @@
     "from uptrain import APIClient, CustomPromptEval\n",
     "import json\n",
     "\n",
-    "UPTRAIN_API_KEY = \"up-******************\"  # Insert your UpTrain key here\n",
+    "UPTRAIN_API_KEY = \"up-**************\"  # Insert your UpTrain key here\n",
     "\n",
     "uptrain_client = APIClient(Settings(uptrain_access_token=UPTRAIN_API_KEY, response_format={\"type\":\"json_object\"}))\n",
     "\n",
