Add colab links

--- a/examples/checks/custom/cosine_similarity.ipynb
+++ b/examples/checks/custom/cosine_similarity.ipynb
@@ -3,7 +3,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/custom/cosine_similarity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
