--- a/examples/checks/custom/guideline_adherence.ipynb
+++ b/examples/checks/custom/guideline_adherence.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9db99848",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/custom/guideline_adherence.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6539807-d2be-47b6-a39e-aaacb1e6e0bb",
    "metadata": {},
    "source": [
@@ -18,14 +26,6 @@
    "metadata": {},
    "source": [
     "<h1 style=\"text-align: center;\">Evaluating Guideline Adherence</h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4bbb618-cca0-41dc-8d50-c10a29ef5b4e",
-   "metadata": {},
-   "source": [
-    "<img style=\"float: left;\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_SVG_Logo.svg/1600px-Google_Colaboratory_SVG_Logo.svg.png?20221103151432\" width=\"100\"/> <h3>Run on Google Colab <a href=\"https://colab.research.google.com/drive/13kI0923CM_Z6OPbly-VL71zyC7O2rCcf?usp=sharing\">here</a>.</h3> "
    ]
   },
   {
