--- a/examples/experiments/context_quality_comparison.ipynb
+++ b/examples/experiments/context_quality_comparison.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5dba8f08",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/experiments/context_quality_comparison.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13cc4195",
+   "metadata": {},
+   "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f76776f-2719-4d42-9836-de37f0c6317c",
    "metadata": {
     "tags": []
