--- a/examples/checks/safeguarding/system_prompt_injection.ipynb
+++ b/examples/checks/safeguarding/system_prompt_injection.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a3f58152",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/safeguarding/system_prompt_injection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6539807-d2be-47b6-a39e-aaacb1e6e0bb",
    "metadata": {
     "id": "f6539807-d2be-47b6-a39e-aaacb1e6e0bb"
