--- a/examples/experiments/data_driven_experimentation_demo.ipynb
+++ b/examples/experiments/data_driven_experimentation_demo.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/experiments/data_driven_experimentation_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "f9mswTdkXAbM"
    },
