--- a/examples/integrations/vector_db/qdrant.ipynb
+++ b/examples/integrations/vector_db/qdrant.ipynb
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
     }
    ],
    "source": [
-    "UPTRAIN_API_KEY = \"up-21ad07e483e0460f95a7f46daa4de088\"  # Insert your UpTrain API key here\n",
+    "UPTRAIN_API_KEY = \"up-######################\"  # Insert your UpTrain API key here\n",
     "\n",
     "uptrain_client = APIClient(\n",
     "    Settings(\n",
