checks explanation improvements + Metrics Guide

--- a/examples/checks/context_awareness/relevance.ipynb
+++ b/examples/checks/context_awareness/relevance.ipynb
@@ -52,9 +52,7 @@
    "id": "559b24f9-b77c-4b1d-bc03-525febecf00b",
    "metadata": {},
    "source": [
-    " \n",
-    "If you face any difficulties, need some help with using UpTrain or want to brainstorm on custom evaluations for your use-case, [speak to the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min).\n",
-    " "
+    " If you face any difficulties, need some help with using UpTrain or want to brainstorm on custom evaluations for your use-case, [speak to the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min)."
    ]
   },
   {
@@ -332,8 +330,8 @@
     "\n",
     "res = uptrain_client.log_and_evaluate(\n",
     "    \"Sample-context-relevance-evals\",\n",
-    "    data,\n",
-    "    [Evals.CONTEXT_RELEVANCE]\n",
+    "    data = data,\n",
+    "    checks = [Evals.CONTEXT_RELEVANCE]\n",
     ")"
    ]
   },
@@ -437,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
