--- a/examples/checks/custom/model_grade_score.ipynb
+++ b/examples/checks/custom/model_grade_score.ipynb
@@ -38,6 +38,13 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                " If you face any difficulties, need some help with using UpTrain or want to brainstorm on custom evaluations for your use-case, [speak to the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min)."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
                 "#### Create an API Key\n",
                 "\n",
                 "To get started, you will first need to get your API key from the [Uptrain Website](https://uptrain.ai/dashboard).\n",
