--- a/examples/checks/language_features/tone_critique.ipynb
+++ b/examples/checks/language_features/tone_critique.ipynb
@@ -317,7 +317,7 @@
     }
    ],
    "source": [
-    "from uptrain import APIClient, Evals\n",
+    "from uptrain import APIClient\n",
     "import json\n",
     "\n",
     "UPTRAIN_API_KEY = \"up-********************\"  # Insert your UpTrain key here\n",
