--- a/examples/checks/custom/cosine_similarity.ipynb
+++ b/examples/checks/custom/cosine_similarity.ipynb
@@ -63,7 +63,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install uptrain"
+        "# !pip install uptrain"
       ]
     },
     {
@@ -81,9 +81,10 @@
       "source": [
         "from uptrain import APIClient, Settings\n",
         "\n",
+        "UPTRAIN_API_KEY = \"up-*********************\"  # Insert your UpTrain API key here\n",
+        "\n",
         "settings = Settings(\n",
-        "    uptrain_access_token=YOUR_API_KEY,\n",
-        "    uptrain_server_url=\"https://demo.uptrain.ai\"\n",
+        "    uptrain_access_token=UPTRAIN_API_KEY,\n",
         ")\n",
         "\n",
         "client = APIClient(settings)"
