checks explanation improvements + Metrics Guide (#496)
* checks explanation improvements + Metrics Guide

* Update python notebooks

* conciseness notebook

* Readme changes

* readme improvements

---------

Co-authored-by: dhruv-macbook-air-m2 <dhruv@uptrain.ai>

--- a/examples/checks/custom/cosine_similarity.ipynb
+++ b/examples/checks/custom/cosine_similarity.ipynb
@@ -38,6 +38,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        " If you face any difficulties, need some help with using UpTrain or want to brainstorm on custom evaluations for your use-case, [speak to the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "#### Create an API Key\n",
         "\n",
         "To get started, you will first need to get your API key from the [Uptrain Website](https://uptrain.ai/dashboard).\n",
@@ -56,7 +63,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install uptrain"
+        "# !pip install uptrain"
       ]
     },
     {
@@ -74,9 +81,10 @@
       "source": [
         "from uptrain import APIClient, Settings\n",
         "\n",
+        "UPTRAIN_API_KEY = \"up-*********************\"  # Insert your UpTrain API key here\n",
+        "\n",
         "settings = Settings(\n",
-        "    uptrain_access_token=YOUR_API_KEY,\n",
-        "    uptrain_server_url=\"https://demo.uptrain.ai\"\n",
+        "    uptrain_access_token=UPTRAIN_API_KEY,\n",
         ")\n",
         "\n",
         "client = APIClient(settings)"
