rogue score tutorial improvements

--- a/examples/checks/language_features/rogue_score.ipynb
+++ b/examples/checks/language_features/rogue_score.ipynb
@@ -17,7 +17,7 @@
    "id": "c2403e87-604e-44c6-8d9e-6c5806bc4cd7",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Evaluating Rogue Score</h1>"
+    "<h1 style=\"text-align: center;\">Evaluating Rouge Score</h1>"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "id": "2ef54d59-295e-4f15-a35f-33f4e86ecdd2",
    "metadata": {},
    "source": [
-    "**What is Rogue Score?**: The Rouge score is a metric used to measure the similarity between two pieces of text. It's Commonly used in tasks like text summarization, machine translation, and text generation to assess how well the generated text aligns with a predefined reference.\n",
+    "**What is Rouge Score?**: The Rouge score is a metric used to measure the similarity between two pieces of text. It's Commonly used in tasks like text summarization, machine translation, and text generation to assess how well the generated text aligns with a predefined reference.\n",
     "\n",
     "For example, for the reference text 'The cat sat on the mat,' the LLM generates a similar one, such as 'A cat is sitting on a mat.' The Rouge Score helps us measure how closely these sentences align. A high Rouge Score indicates a close match in meaning, signifying the effectiveness of the language model in faithfully reproducing the original sentence. This is useful in real life for tasks such as verifying if an AI-generated news headline genuinely expresses the same idea as the original news article.\"\n",
     "\n",
@@ -33,9 +33,17 @@
     "\n",
     "| Column Name | Description |\n",
     "| ----------- | ----------- |\n",
-    "| text-generated | The column containing the generated text for comparison. |\n",
+    "| text_generated | The column containing the generated text for comparison. |\n",
     "| text_source | The column containing the source or reference text. |\n",
     "| rouge_score | The column that will store the Rouge scores after the evaluation. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae1bf62e",
+   "metadata": {},
+   "source": [
+    " If you face any difficulties, need some help with using UpTrain or want to brainstorm on custom evaluations for your use-case, [speak to the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min)."
    ]
   },
   {
@@ -43,14 +51,32 @@
    "id": "76008cf6-dbd3-44bc-8556-86278868e746",
    "metadata": {},
    "source": [
-    "Install UpTrain by running 'pip install uptrain'\n",
-    "Install polars by running 'pip install polars'\n",
-    "Install rouge-score by running 'pip install rouge-score'"
+    "## Step 1: Install UpTrain by running 'pip install uptrain' along with polars and rouge-score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
+   "id": "80304a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install uptrain\n",
+    "# !pip install polars\n",
+    "# !pip install rouge_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c9e44a0",
+   "metadata": {},
+   "source": [
+    "## Step 2: Defining OpenAI Key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "90f4ff7d-10b9-482e-aa92-85c64ffc4057",
    "metadata": {},
    "outputs": [],
@@ -65,13 +91,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first evaluate some data with high rouge data (with respect to the source)."
+    "## Step 3: Let's define our dataset to run evaluations upon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "11a472a8",
+   "execution_count": 3,
+   "id": "0442f381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +116,45 @@
     "        \"Global cooperation is necessary for tackling complex issues.\",\n",
     "        \"Progress in medical technology improves patient care.\"\n",
     "    ]\n",
-    "})\n"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "id": "20be1cef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_rouge_df = pl.DataFrame({\n",
+    "    \"text_generated\": [\n",
+    "        \"The cat sat on the mat.\",\n",
+    "        \"I like to eat pizza for dinner.\",\n",
+    "        \"Summer is my favorite season.\",\n",
+    "        \"Programming is an interesting skill to learn.\",\n",
+    "        \"Mountains are a breathtaking natural wonder.\"\n",
+    "    ],\n",
+    "    \"text_source\": [\n",
+    "        \"A cat is sitting on a mat.\",\n",
+    "        \"Pizza is my preferred choice for dinner.\",\n",
+    "        \"Winter is the season I enjoy the most.\",\n",
+    "        \"Learning to program can be fascinating.\",\n",
+    "        \"The beauty of nature is evident in mountains.\"\n",
+    "    ]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1339556",
+   "metadata": {},
+   "source": [
+    "### Step 3: Evaluating the Rouge Score for the defined datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "d15fb087-3ed2-442f-9b23-35c7dbc6128e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "0a950849-0348-450f-add0-cea2c1423525",
    "metadata": {},
    "outputs": [
@@ -134,39 +193,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's evaluate some data with low rouge data (with respect to the source)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "low_rouge_df = pl.DataFrame({\n",
-    "    \"text_generated\": [\n",
-    "        \"The cat sat on the mat.\",\n",
-    "        \"I like to eat pizza for dinner.\",\n",
-    "        \"Summer is my favorite season.\",\n",
-    "        \"Programming is an interesting skill to learn.\",\n",
-    "        \"Mountains are a breathtaking natural wonder.\"\n",
-    "    ],\n",
-    "    \"text_source\": [\n",
-    "        \"A cat is sitting on a mat.\",\n",
-    "        \"Pizza is my preferred choice for dinner.\",\n",
-    "        \"Winter is the season I enjoy the most.\",\n",
-    "        \"Learning to program can be fascinating.\",\n",
-    "        \"The beauty of nature is evident in mountains.\"\n",
-    "    ]\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "id": "346c0e30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
+   "id": "84e5bab2",
    "metadata": {},
    "outputs": [
     {
@@ -201,14 +231,6 @@
    "source": [
     "print(rouge_score)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "346c0e30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
