--- a/examples/checks/language_features/tone_critique.ipynb
+++ b/examples/checks/language_features/tone_critique.ipynb
@@ -45,6 +45,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7edf3f4",
+   "metadata": {},
+   "source": [
+    " If you face any difficulties, need some help with using UpTrain or want to brainstorm on custom evaluations for your use-case, [speak to the maintainers of UpTrain here](https://calendly.com/uptrain-sourabh/30min)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76008cf6-dbd3-44bc-8556-86278868e746",
    "metadata": {},
    "source": [
