--- a/examples/checks/response_quality/matching.ipynb
+++ b/examples/checks/response_quality/matching.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "from uptrain import EvalLLM, Evals, ResponseMatching\n",
+    "from uptrain import EvalLLM, ResponseMatching\n",
     "import json\n",
     "\n",
     "OPENAI_API_KEY = \"sk-***************\"  # Insert your OpenAI key here\n",
@@ -138,7 +138,7 @@
     "\n",
     "res = eval_llm.evaluate(\n",
     "    data = data,\n",
-    "    checks = [ResponseMatching(method = 'llm')]    #method: llm/exact/rouge\n",
+    "    checks = [ResponseMatching(method = 'llm')]    # method: llm/exact/rouge\n",
     ")"
    ]
   },
@@ -298,7 +298,7 @@
     }
    ],
    "source": [
-    "from uptrain import APIClient, Evals\n",
+    "from uptrain import APIClient, ResponseMatching\n",
     "import json\n",
     "\n",
     "UPTRAIN_API_KEY = \"up-*******************\"  # Insert your UpTrain key here\n",
