--- a/examples/checks/safeguarding/jailbreak_detection.ipynb
+++ b/examples/checks/safeguarding/jailbreak_detection.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "from uptrain import EvalLLM, Evals, JailbreakDetection\n",
+    "from uptrain import EvalLLM, JailbreakDetection\n",
     "import json\n",
     "\n",
     "OPENAI_API_KEY = \"sk-****************\"  # Insert your OpenAI key here\n",
@@ -372,7 +372,7 @@
     }
    ],
    "source": [
-    "from uptrain import APIClient, Evals, JailbreakDetection\n",
+    "from uptrain import APIClient, JailbreakDetection\n",
     "import json\n",
     "\n",
     "UPTRAIN_API_KEY = \"up-******************\"  # Insert your UpTrain key here\n",
