--- a/examples/checks/custom/guideline_adherence.ipynb
+++ b/examples/checks/custom/guideline_adherence.ipynb
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "from uptrain import EvalLLM, Evals, GuidelineAdherence\n",
+    "from uptrain import EvalLLM, GuidelineAdherence\n",
     "import json\n",
     "\n",
     "OPENAI_API_KEY = \"sk-********************\"  # Insert your OpenAI key here\n",
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "from uptrain import APIClient, Evals\n",
+    "from uptrain import APIClient, GuidelineAdherence\n",
     "import json\n",
     "\n",
     "UPTRAIN_API_KEY = \"up-********************\"  # Insert your UpTrain key here\n",
@@ -319,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
