--- a/examples/checks/language_features/tone_critique.ipynb
+++ b/examples/checks/language_features/tone_critique.ipynb
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "from uptrain import EvalLLM, Evals, CritiqueTone\n",
+    "from uptrain import EvalLLM, CritiqueTone\n",
     "import json\n",
     "\n",
     "OPENAI_API_KEY = \"sk-********************\"  # Insert your OpenAI key here\n",
@@ -317,7 +317,7 @@
     }
    ],
    "source": [
-    "from uptrain import APIClient\n",
+    "from uptrain import APIClient, CritiqueTone\n",
     "import json\n",
     "\n",
     "UPTRAIN_API_KEY = \"up-********************\"  # Insert your UpTrain key here\n",
