--- a/examples/checks/language_features/rouge_score.ipynb
+++ b/examples/checks/language_features/rouge_score.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "**What is Rogue Score?**: The Rouge score is a metric used to measure the similarity between two pieces of text. It's Commonly used in tasks like text summarization, machine translation, and text generation to assess how well the generated text aligns with a predefined reference.\n",
     "\n",
-    "For example, for the reference text 'The cat sat on the mat,' the LLM generates a similar one, such as 'A cat is sitting on a mat.' The Rouge Score helps us measure how closely these sentences align. A high Rouge Score indicates a close match in meaning, signifying the effectiveness of the language model in faithfully reproducing the original sentence. This is useful in real life for tasks such as verifying if an AI-generated news headline genuinely expresses the same idea as the original news article.\"\n",
+    "For example, for the reference text 'The cat sat on the mat,' the LLM might generate a similar one, such as 'A cat is sitting on a mat,' or it could generate something completely different like 'The dog is lying on the carpet.' The Rouge Score helps us measure how closely these sentences align. A high Rouge Score indicates a close match in meaning, signifying the effectiveness of the language model in faithfully reproducing the original sentence. This is useful in real life for tasks such as verifying if an AI-generated news headline genuinely expresses the same idea as the original news article.\"\n",
     "\n",
     "**Data schema**: The data schema required for this evaluation is as follows:\n",
     "\n",
