--- a/docs/tutorials/openai-evals.mdx
+++ b/docs/tutorials/openai-evals.mdx
@@ -258,4 +258,5 @@ client.get_run(response["run_id"])
 
 You can also view the results on the [UpTrain Dashboard](https://demo.uptrain.ai/dashboard/) by entering your API key as a password.
 
-![image.png](openai-evals_files/image.png)
+![image](https://github.com/uptrain-ai/uptrain/assets/43818888/0dc6bb12-ab66-4bef-bfb0-31fab0f112f7)
+
