Update OpenAI Evals tutorial with title and description

--- a/docs/tutorials/openai-evals.mdx
+++ b/docs/tutorials/openai-evals.mdx
@@ -1,5 +1,7 @@
-# OpenAI Evals
-Performance evaluation - LLM-assisted Q&A
+---
+title: OpenAI Evals
+description: Performance OpenAI Evals using UpTrain
+---
 
 **Overview**: In this example, we will see how to use UpTrain to run openai evals. You can run any of the standard evals defined in the evals registry or create your custom one with custom prompts. We will use a Q&A task as an example to highlight both of them.
 
