--- a/examples/integrations/vector_db/FAISS.ipynb
+++ b/examples/integrations/vector_db/FAISS.ipynb
@@ -6,7 +6,7 @@
         "id": "Y0FyVqKyV0rz"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/1gEgXOTTcWTIFyEp0_oEug8buGGKKaR1s?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/integrations/vector_db/FAISS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -717,7 +717,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.7"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
