--- a/examples/integrations/vector_db/chroma.ipynb
+++ b/examples/integrations/vector_db/chroma.ipynb
@@ -6,7 +6,7 @@
         "id": "awPl0cn75zaB"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/1H5QGOBrpEfGKlDa1anpfvW_nLqdMk-Mq?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/integrations/vector_db/chroma.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -566,7 +566,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.7"
     },
     "orig_nbformat": 4
   },
