jina colab link

--- a/examples/integrations/embedding_models/jina.ipynb
+++ b/examples/integrations/embedding_models/jina.ipynb
@@ -6,7 +6,7 @@
         "id": "dzmb93kniuA8"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/1oFlCDMqXttaC2oBK-ldLA3Rbzf8m6Mtd?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/integrations/embedding_models/jina.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
