--- a/examples/integrations/llm_providers/anyscale.ipynb
+++ b/examples/integrations/llm_providers/anyscale.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain import EvalLLM, Evals, CritiqueTone, Settings\n",
+    "from uptrain import EvalLLM, Evals, Settings\n",
     "import json"
    ]
   },
@@ -151,7 +151,7 @@
    "source": [
     "results = eval_llm.evaluate(\n",
     "    data=data,\n",
-    "    checks=[Evals.CONTEXT_RELEVANCE, Evals.FACTUAL_ACCURACY, Evals.RESPONSE_RELEVANCE, CritiqueTone(persona=\"teacher\")]\n",
+    "    checks=[Evals.CONTEXT_RELEVANCE, Evals.FACTUAL_ACCURACY]\n",
     ")"
    ]
   },
@@ -164,12 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -185,11 +181,7 @@
       "      \"score_context_relevance\": 1.0,\n",
       "      \"explanation_context_relevance\": \"The extracted context can answer the given user query completely. The context mentions that football is undoubtedly the world's most popular sport, with major events like the FIFA World Cup and sports personalities like Ronaldo and Messi drawing a followership of more than 4 billion people. The context also provides data and statistics to support this claim, such as the number of TV viewers and social media followers for these events and personalities. Furthermore, the context mentions that cricket is particularly popular in countries like India, Pakistan, Australia, and England, and the NBA has made basketball popular worldwide. However, it doesn't provide any data or statistics to determine the global popularity of these sports or compare them with football.\",\n",
       "      \"score_factual_accuracy\": 1.0,\n",
-      "      \"explanation_factual_accuracy\": \" 1. Football is the most popular sport.\\nReasoning for yes: The context explicitly states that football is the world's most popular sport.\\nReasoning for no: No arguments.\\nJudgement: yes. as the context explicitly supports the fact.\\n2. Around 4 billion people follow football worldwide.\\nReasoning for yes: The context states that football has a followership of more than 4 billion people.\\nReasoning for no: No arguments.\\nJudgement: yes. as the context explicitly supports the fact.\\n\",\n",
-      "      \"score_response_relevance\": 0.0,\n",
-      "      \"explanation_response_relevance\": \"The LLM response contains a lot of additional irrelevant information because it includes details about the number of followers, the popularity of football in different regions, and the history of the sport. These details are not necessary to answer the question of which is the most popular global sport. The user query only asks for the name of the sport, and the LLM response should provide a concise and direct answer to that question without including unnecessary information.\\nThe given LLM response doesn't answer the user query at all. The user query asks for the most popular global sport, but the LLM response only mentions the number of followers for football. The LLM response doesn't provide any information about the popularity of the sport or its global reach. Without this information, the user cannot determine which sport is the most popular globally. Therefore, the user will be highly dissatisfied with the given answer.\",\n",
-      "      \"score_tone\": 0.2,\n",
-      "      \"explanation_tone\": \" The response provided by the machine-generated chatbot is not helpful at all. It simply states a fact without providing any context or relevance to the user's query. The tone of the response is not encouraging or supportive, which doesn't align with the persona of a helpful chatbot. Hence, a score of 1 is appropriate.\\n\\n[Score]: 1\"\n",
+      "      \"explanation_factual_accuracy\": \" 1. Football is the most popular sport.\\nReasoning for yes: The context explicitly states that football is the world's most popular sport.\\nReasoning for no: No arguments.\\nJudgement: yes. as the context explicitly supports the fact.\\n2. Around 4 billion people follow football worldwide.\\nReasoning for yes: The context states that football has a followership of more than 4 billion people.\\nReasoning for no: No arguments.\\nJudgement: yes. as the context explicitly supports the fact.\\n\"\n",
       "   }\n",
       "]\n"
      ]
@@ -216,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
