--- a/examples/integrations/embedding_models/jina.ipynb
+++ b/examples/integrations/embedding_models/jina.ipynb
@@ -40,7 +40,7 @@
         "\n",
         "This is particularly useful for large language models (LLMs), which need to process vast amounts of data and find relevant information quickly.\n",
         "\n",
-        "## What role does Jina embeddings play in your RAG based application?\n",
+        "## What role do Jina embeddings play in your RAG based application?\n",
         "\n",
         "Jina Embeddings is a specialized embedding model, based on the Bert architecture (JinaBert), designed to support English text with a maximum sequence length of 8192 tokens. While working on RAG based applications, you can use Jina to retrieve information from your context documents.\n",
         "\n",
@@ -81,7 +81,7 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install requests uptrain"
+        "%pip install requests uptrain"
       ]
     },
     {
@@ -99,20 +99,42 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ua4DbqQJedyc"
+        "id": "GA6mhFCrelIo"
       },
       "source": [
-        "## Step 2: Define your document to be embedded\n",
+        "## Step 2: Choose your embedding model and get your api key [here](https://jina.ai/embeddings/?ref=jina-ai-gmbh.ghost.io)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "f-SmUOzGeEBE"
+      },
+      "outputs": [],
+      "source": [
+        "model_name = \"jina-embeddings-v2-base-en\"\n",
+        "api_key = \"jina_****************\"  # Replace with your Jina API key\n",
+        "\n",
+        "headers = {\n",
+        "    \"Content-Type\": \"application/json\",\n",
+        "    \"Authorization\": f\"Bearer {api_key}\"\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Step 3: Define your document to be embedded\n",
         "\n",
         "Let's make a similarity search for Sci-Fi books!\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "-tFOZT4feAv_"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "data = [\n",
@@ -125,35 +147,14 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "GA6mhFCrelIo"
-      },
+      "metadata": {},
       "source": [
-        "## Step 3: Choose your embedding model and get your api key from [here](https://jina.ai/embeddings/?ref=jina-ai-gmbh.ghost.io)\n"
+        "## Step 4: Compute the embeddings for the documents"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "f-SmUOzGeEBE"
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        "model_name = \"jina-embeddings-v2-base-en\"\n",
-        "api_key = \"jina_****************\"  # Replace with your Jina API key\n",
-        "\n",
-        "headers = {\n",
-        "    \"Content-Type\": \"application/json\",\n",
-        "    \"Authorization\": f\"Bearer {api_key}\"\n",
-        "}\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "TQDeVeA4eLRq"
       },
@@ -165,8 +166,9 @@
         "}\n",
         "\n",
         "response = requests.post(\"https://api.jina.ai/v1/embeddings\", json=data_payload, headers=headers)\n",
-        "embedding_vectors = np.array([item['embedding'] for item in response.json()['data']])  # Extract the embedding vectors from the response JSON\n",
-        "\n"
+        "\n",
+        "# Extract the embedding vectors from the response JSON\n",
+        "embedding_vectors = np.array([item['embedding'] for item in response.json()['data']])"
       ]
     },
     {
@@ -175,7 +177,7 @@
         "id": "7T75q_i8gBkh"
       },
       "source": [
-        "##Step 5: Compute the embedding vector for the question"
+        "## Step 5: Compute the embeddings for the question"
       ]
     },
     {
@@ -186,7 +188,8 @@
       },
       "outputs": [],
       "source": [
-        "question = \"Which book covers the abduction story of Shreya Singh, a princess from Rajasthan\"  # Replace with your actual input for similarity search\n",
+        "# Replace with your actual input for similarity search\n",
+        "question = \"Which book covers the abduction story of Shreya Singh, a princess from Rajasthan\"\n",
         "\n",
         "# Compute the embedding vector for the question\n",
         "question_payload = {\n",
@@ -195,19 +198,14 @@
         "}\n",
         "\n",
         "response = requests.post(\"https://api.jina.ai/v1/embeddings\", json=question_payload, headers=headers)\n",
-        "question_embedding = np.array(response.json()['data'][0]['embedding'])  # Extract the embedding vector from the response JSON"
+        "question_embedding = np.array(response.json()['data'][0]['embedding'])"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "3Rbf7OW3eOcj"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Compute the cosine similarity between the question embedding and the text embeddings\n",
-        "similarities = np.dot(embedding_vectors, question_embedding) / (np.linalg.norm(embedding_vectors, axis=1) * np.linalg.norm(question_embedding))"
+        "## Step 6: Compute the cosine similarity between the question embedding and the text embeddings"
       ]
     },
     {
@@ -236,6 +234,8 @@
         }
       ],
       "source": [
+        "similarities = np.dot(embedding_vectors, question_embedding) / (np.linalg.norm(embedding_vectors, axis=1) * np.linalg.norm(question_embedding))\n",
+        "\n",
         "# Print the text passages sorted by similarity to the question\n",
         "embedding_similarities = []\n",
         "for i in np.argsort(similarities)[::-1]:\n",
@@ -250,7 +250,7 @@
         "id": "1gKxhMs0g7Js"
       },
       "source": [
-        "## Step 6: Evaluating the retrieved context's quality using UpTrain's Open-Source Software (OSS)"
+        "## Step 7: Evaluating the retrieved context's quality using UpTrain's Open-Source Software (OSS)"
       ]
     },
     {
@@ -404,7 +404,7 @@
         "id": "3mSwa0ulhEAS"
       },
       "source": [
-        "## [Optional] Step 7: UpTrain Managed Service and Dashboards\n"
+        "## [Optional] Step 8: UpTrain Managed Service and Dashboards\n"
       ]
     },
     {
